ingress/httpd-deployment-example.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ilanni-namespace
  labels:
    name: ilanni-namespace
---
apiVersion: v1
kind: Service
metadata:
  name: ilanni-httpd-svc
  namespace: ilanni-namespace
spec:
  type: NodePort
  ports:
  - name: http-port
    nodePort: 30002
    port: 80
    targetPort: 80
  selector:
    app: ilanni-httpd-dm
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ilanni-httpd
  namespace: ilanni-namespace
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    #由于replicas为2,则整个升级,pod个数在1-3个之间
    rollingUpdate:
      ##滚动升级时会先启动1个pod
      maxSurge: 1
      maxUnavailable: 2
  template:
    metadata:
      labels:
        app: ilanni-httpd-dm
    spec:
      ##k8s将会给应用发送SIGTERM信号，可以用来正确、优雅地关闭应用,默认为30秒
      terminationGracePeriodSeconds: 60
      restartPolicy: Always
      containers:
      - name: ilanni-httpd
        image: registry.api.weibo.com/cms-auto/httpd:alpine
        imagePullPolicy: Always
